--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-PYTHONPATH=c:\Programs\Python37\Lib\site-packages;c:\Programs\Python37\Lib;c:\Programs\Python37
+PYTHONPATH1=c:\Programs\Python37\Lib\site-packages;c:\Programs\Python37\Lib;c:\Programs\Python37
